# ai-in-prague

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  prague_ai_companies.md  pyproject.toml
.githooks/: pre-commit
data/: companies_index.json
data/companies/: 2n-telekomunikace.json  2t-consulting.json  accenture.json  acrea.json  actum.json  adaptive-data-mgmt.json  adastra.json  addai-life.json  advokatni-asoc-ai.json  agentfly-tech.json  ai-detem.json  ai-inst-transform.json  ai-institute.json  ai-koucka.json  ai-tomatica.json  aic-optimalizace.json  aic-strojove-uceni.json  aic-teorie-her.json  aiexcellence.json  aignos.json  aihub.json  aim.json  aireen.json  algotech.json  alice-technologies.json  alignment-complex.json  alphaai.json  amazon.json  analysis-biomed-data.json  anywhere-legal.json  apify.json  aplikovana-algebra.json  apoco.json  apple.json  applifting.json  appsatori.json  arbo-technologies.json  aricoma.json  ataccama.json  atlas-group.json  (+333 more)
data/tmp/: mews-about.md
docs/: graph.html  index.html
docs/superpowers/plans/: 2026-03-29-company-graph.md
docs/superpowers/specs/: 2026-03-29-company-graph-design.md
notebooks/: eda.ipynb  eda_out.ipynb
scripts/: backfill_risk.py  build_graph.py  dispatch.py  render_leaflets.py  scrape_startupjobs.py  validate_company.py
skills/scrape-company/: SKILL.md
templates/: company_leaflet.tex
tests/: test_build_graph.py
