[project]
name = "ai-in-prague"
version = "0.1.0"
description = "Prague AI/ML company catalog for job seekers"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "papermill>=2.7.0",
    "pre-commit>=4.5.1",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[project.scripts]
scrape = "scripts.dispatch:main"
validate = "scripts.validate_company:cli"
render = "scripts.render_leaflets:main"
